--- a/style.css
+++ b/style.css
@@ -195,6 +195,8 @@ i{
 .about-sect{
    padding: 25px;
 }
+.right-main-content{
+ padding: 2rem 3rem 2rem 3rem;
 h2.right-title{
     text-align: left;
     color: black;
